Implemented search on releases